<resources>
    <string name="app_name">RidePal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="explore_your">Explore Your <bold>Surroundings</bold></string>
    <string name="surroundings">Surroundings</string>
    <string name="track_your">Track Your</string>
    <string name="location">Location</string>
    <string name="live_health">Live Health</string>
    <string name="readings">Readings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</string>
    <string name="policy">Creating an account means you’re okay with our <u>Terms of Service</u> and our <u>Privacy Policy</u></string>
    <string name="welcome">Hello &#x1F44B; Welcome to the DashBoard &#x1F917;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cycling_tips">Cycling Tips</string>
    <string name="profile">Me</string>
    <string name="welcome1">Hello, &lt;b>%1$s&lt;/b></string>
    <string name="quick_tabs">Quick Tabs</string>
    <string name="exercise_button_icon">Exercise</string>
    <string name="reading_button">Reading</string>
    <string name="recent_locations">Recent Locations</string>
    <string name="direction">Direction</string>
    <string name="recent_readings">Recent Readings</string>
    <string name="duration">Duration</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="calories">Calories</string>
    <string name="new_reading">New Reading</string>
</resources>