<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ridehub360.ridepal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_readings"
        android:name="com.ridehub360.ridepal.ui.home.ReadingsFragment"
        android:label="@string/readings"
        tools:layout="@layout/readings_fragment" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.ridehub360.ridepal.ui.home.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/location_fragment" />

    <fragment
        android:id="@+id/navigation_cycling_tips"
        android:name="com.ridehub360.ridepal.ui.home.CyclingTipsFragment"
        android:label="@string/cycling_tips"
        tools:layout="@layout/cycling_tips_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ridehub360.ridepal.ui.home.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
</navigation>